2008-10-29 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/prefs.c
	  src/prefsdlg.c
	  src/file_convert.c
	  data/gtkpod.glade: straighten out bug that allowed to unselect
	  conversion and as a side effect switched off copying of the
	  music files to the iPod.

2008-10-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/prefsdlg.c
	  data/gtkpod.glade: option for mass-editing of tags was only
	  available if "writing tags to disk" was selected.

2008-10-01 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/repository.c
	  data/gtkpod.glade: glade3 must have decided to rename a number
	  of widget names. This patch fixes this issue for the
	  Repositories Prefs and Create New Repository windows.

2008-09-30  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/mp4file.c (mp4_get_file_info): Set track->lyrics_flag
	  for mp4 files

2008-09-29 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/ipod_init.c
	  data/gtkpod.glade: glade3 must have decided to rename a number
	  of widget names. More of these patches to come. Initializing a
	  new iPod should work fine again.

2008-09-28 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* INSTALL: removed git-svn from the list of required packages

2008-09-27 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* INSTALL: added instructions on how to compile libgopd and gtkpod on a
          fairly virgin Ubuntu Hardy (8.04) installation. 

2008-09-21 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c (id3_set_string): don't write genre IDs instead of
	  genre string. The use of ID numbers seems antiquated.

2008-09-21 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c (id3_tag_read): (partially) implement genre IDs in
	  parenthesis according to
	  http://www.id3.org/id3v2.3.0#head-42b02d20fb8bf48e38ec5415e34909945dd849dc
	  Ignore genre IDs in parenthesis if a "refinement" is
	  given. Otherwise use the first ID found as genre. Fixes tracker
	  item 2113461.
